# docassemble-AppealsMotionToReconsider

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/AppealsMotionToReconsider/data/questions/: Motion_to_Reconsider.yml  Motion_to_Reconsider_Template.yml
docassemble/AppealsMotionToReconsider/data/templates/: Motion_to_Reconsider.docx  Motion_to_Reconsider_Template.docx
