[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.AppealsMotionToReconsider"
version = "1.0.5"
description = "Motion to reconsider template"
readme = "README.md"
authors = [
    { name = "Rebecca (Ngan) Truong", email = "ntruong2@su.suffolk.edu" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
    "docassemble.MassAppealsCourt @ git+https://github.com/SuffolkLITLab/docassemble-MassAppealsCourt.git@main",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
